Name:		json-diff-generic
Version: 	0.0.1
Synopsis:	Apply json-diff on haskell datatypes
Category: 	Graphics, Geometry, Typography
Copyright: 	Kristof Bastiaensen (2018)
Stability:	Unstable
License:	BSD3
License-file:	LICENSE
Author:		Kristof Bastiaensen
Maintainer:	Kristof Bastiaensen
Bug-Reports: 	https://github.com/kuribas/cubicbezier/issues
Build-type:	Simple
Cabal-version:	>=1.8
Description:	Apply json-diff directly to haskell datatypes.  Typeclasses can be derived automatically with template haskell.
 
Source-repository head
  type:		git
  location:	https://github.com/kuribas/aeson-diff-generic

Library
  Ghc-options: -Wall
  Build-depends: base >= 4.8 && <= 5, aeson, aeson-diff, bytestring (>=0.10),
                 hashable, mtl, scientific, text, unordered-containers, containers,
                 vector, bytestring, time, uuid-types, dlist, tagged
  Exposed-Modules:
    Data.Aeson.Diff.Generic
