Name:		aeson-diff-generic
Version: 	0.0.2
Synopsis:	Apply a json-patch to any haskell datatype.
Category: 	JSON, Web
Copyright: 	Kristof Bastiaensen (2018)
Stability:	Unstable
License:	BSD3
License-file:	LICENSE
Author:		Kristof Bastiaensen
Maintainer:	Kristof Bastiaensen
Bug-Reports: 	https://github.com/kuribas/aeson-diff-generic/issues
Build-type:	Simple
Cabal-version:	>=1.8
Tested-With:    GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4,
                GHC == 7.10.2, GHC == 8.0.2, GHC == 8.2.2
Description:	Apply a json-patch to any haskell datatype.  It extends the capabilities of the aeson-diff packages, and includes template haskell functions for automatically deriving the right instances.
                      
 
Source-repository head
  type:		git
  location:	https://github.com/kuribas/aeson-diff-generic

Library
  Ghc-options: -Wall
  Build-depends: base >= 4.8 && <= 5, aeson, aeson-diff, bytestring (>=0.10),
                 hashable, mtl, scientific, text, unordered-containers, containers,
                 vector, bytestring, time, uuid-types, dlist, tagged, template-haskell,
                 th-abstraction
  Exposed-Modules: Data.Aeson.Diff.Generic
                   Data.Aeson.Diff.Generic.TH
                   Data.Aeson.Diff.Generic.Instances
  Other-Modules: Data.Aeson.Diff.Generic.Types
                 
                 
