Name:		aeson-diff-generic
Version: 	0.1.0
Synopsis:	Apply a json-patch to any haskell datatype.
Category: 	JSON, Web
Copyright: 	Kristof Bastiaensen (2018)
Stability:	Unstable
License:	BSD3
License-file:	LICENSE
Author:		Kristof Bastiaensen
Maintainer:	Kristof Bastiaensen
Bug-Reports: 	https://github.com/kuribas/aeson-diff-generic/issues
Build-type:	Simple
Cabal-version:	>=1.8
Tested-With:    GHC == 7.10.2
              , GHC == 8.0.2
              , GHC == 8.2.2
              , GHC == 8.4.4
              , GHC == 8.6.5
Description:	Apply a json-patch directly to a haskell datatype.  It extends the capabilities of the aeson-diff packages, and includes template haskell functions for automatically deriving the right instances.

extra-source-files: .travis.yml
                    README.md
                    changelog.md

Source-repository head
  type:		git
  location:	https://github.com/kuribas/aeson-diff-generic

Library
  Ghc-options: -Wall
  if impl(ghc >= 8.0)
    Ghc-options: -Wcompat
  build-depends: base >= 4.5 && <= 5,
                 aeson,
                 aeson-diff >= 1.1.0.0 && < 1.2,
                 bytestring,
                 containers,
                 dlist >= 0.6,
                 hashable,
                 lens,
                 scientific,
                 tagged,
                 template-haskell,
                 text,
                 th-abstraction,
                 time,
                 unordered-containers,
                 uuid-types >= 1.0.3 && <1.1,
                 vector

  if !impl(ghc >= 8.0)
    -- `Data.Semigroup`, `Control.Monad.Fail` and `Control.Monad.IO.Class`
    -- are available in base only since GHC 8.0 / base 4.9
    build-depends:
      semigroups >= 0.18.2 && < 0.20,
      transformers >= 0.2.2.0,
      transformers-compat >= 0.3,
      fail == 4.9.*

  if !impl(ghc >= 7.10)
    -- `Numeric.Natural` is available in base only since GHC 7.10 / base 4.8
    build-depends: nats >= 1 && < 1.2
           
  Exposed-Modules: Data.Aeson.Diff.Generic
                   Data.Aeson.Diff.Generic.TH
                   Data.Aeson.Diff.Generic.Instances
                   Data.Aeson.Diff.Generic.PathOptics
  Other-Modules: Data.Aeson.Diff.Generic.Types
                 
                 
